# verilog_i2c_lab

./: .gitignore  CLAUDE.md  README.md  README.zh-TW.md  pyproject.toml
.ralph-in-claude/: prd.json  progress.txt  state.json
.ralph-in-claude/tasks/: prd-phase1-cocotb-layer.md  prd-phase2-fastapi-backend.md  prd-phase3-react-flow-frontend.md  prd-phase4-protocol-level-primitives.md  prd-waveform-viewer.md
backend/: requirements.txt
backend/app/: main.py
backend/app/routes/: simulation.py  templates.py
backend/app/services/: runner.py  templates.py  vcd_parser.py  waveform.py
backend/sim/: __init__.py  i2c_driver.py  protocol_interpreter.py  results.xml  test_runner.py
backend/sim/rtl/: i2c_slave.v
backend/sim/templates/: basic_write_read.json  full_test.json  protocol_write.json  protocol_write_read.json  repeated_start_read.json  stress_test.json
backend/sim/tests/: i2c_system_cocotb.vcd  results.xml  test_i2c_cocotb.py  test_protocol.py
backend/tests/: test_api.py  test_protocol_interpreter.py  test_test_runner.py  test_validate_protocol_sequence.py
frontend/: package.json  vite.config.ts
frontend/public/surfer/: index.html  surfer.d.ts  surfer.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ResizeHandle.tsx  ResultPanel.tsx  Sidebar.tsx  TemplateDropdown.tsx  Toolbar.tsx  WaveformPanel.tsx
frontend/src/lib/: api.ts  highlightContext.ts  protocol-validate.ts  serialize.test.ts  serialize.ts  useFlowPersistence.ts  useNodeHighlight.ts  validate.ts  waveform.ts
plan/: i2c_demo_plan.md  roadmap.md  waveform_support.md
(+11 files in other folders)
